WIP: use cbor4ii

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,10 @@ members = [
 #fvm_ipld_encoding = { path = "../ref-fvm/ipld/encoding"}
 #fvm_ipld_blockstore = { path = "../ref-fvm/ipld/blockstore"}
 
+[patch.crates-io]
+fvm_shared = { git = "https://github.com/filecoin-project/ref-fvm", branch = "cbor4ii" }
+fvm_ipld_encoding = { git = "https://github.com/filecoin-project/ref-fvm", branch = "cbor4ii" }
+
 [profile.wasm]
 inherits = "release"
 panic = "abort"
