--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -1,20 +1,14 @@
 [package]
-name = "fil_actor_hierarchical_sca"
-description = "Subnet Coordinator Actor (SCA) for Hierarchical Consensus"
+name = "actor_primitives"
+description = "Core primitives for actor development and support for HC-compatible actors"
 version = "9.0.0-alpha.1"
 license = "MIT OR Apache-2.0"
 authors = ["ConsensusLab", "Protocol Labs", "Filecoin Core Devs"]
-edition = "2018"
+edition = "2021"
 repository = "https://github.com/filecoin-project/builtin-actors"
-keywords = ["filecoin", "web3", "wasm"]
-
-[lib]
-## lib is necessary for integration tests
-## cdylib is necessary for Wasm build
-crate-type = ["cdylib", "lib"]
 
 [dependencies]
-fil_actors_runtime = { version = "9.0.0-alpha.1", path = "../../runtime", features = ["fil-actor"] }
+fil_actors_runtime = { version = "9.0.0-alpha.1", path = "../runtime", features = ["fil-actor"] }
 fvm_shared = { version = "0.8.0", default-features = false }
 fvm_ipld_hamt = "0.5.1"
 num-traits = "0.2.14"
@@ -28,10 +22,3 @@ serde = { version = "1.0.136", features = ["derive"] }
 anyhow = "1.0.56"
 fvm_ipld_blockstore = "0.1.1"
 fvm_ipld_encoding = "0.2.2"
-actor_primitives = { path = "../../primitives" }
-
-[dev-dependencies]
-fil_actors_runtime = { path = "../../runtime", features = ["test_utils", "sector-default"] }
-[features]
-fil-actor = []
-
